Fix opacity problem on safari

--- a/css/faq.css
+++ b/css/faq.css
@@ -25,7 +25,7 @@ article {
 }
 
 .question:hover > span {
-  opacity: 100%;
+  opacity: 1;
 }
 
 .question p {
@@ -102,7 +102,7 @@ article {
 }
 
 .question:hover + .wave {
-  opacity: 100%;
+  opacity: 1;
 }
 
 .wave {
