--- a/css/past.css
+++ b/css/past.css
@@ -138,7 +138,7 @@ body {
 }
 
 .partner-section a:hover:before {
-  opacity: 100%;
+  opacity: 1;
 }
 /*------------------------------MOBILE------------------------------*/
 @media screen and (max-width: 1100px) {
